Fix preload on iOS

--- a/styles/music_player.css
+++ b/styles/music_player.css
@@ -7,8 +7,8 @@ html {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 500px;
-    height: 500px;
+    width: 414px;
+    height: 414px;
     transform: translate(-50%, -50%);
     background: url('http://7xqeox.com1.z0.glb.clouddn.com/%E5%AE%89%E5%92%8C%E6%A1%A5%E5%8C%97.jpg') no-repeat 50% 50%;
     background-size: contain;
@@ -19,10 +19,10 @@ html {
     top: 50%;
     left: 50%;
     box-sizing: border-box;
-    width: 420px;
+    width: 100%;
     padding: 8px 12px;
     transform: translate(-50%, -50%);
-    border-radius: 6px;
+    /*border-radius: 6px;*/
     background: rgba(255, 255, 255, .42);
     -webkit-backdrop-filter: blur(15px);
 }
